# prozorro_crawler

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/: main.py  model.py  settings.py  storage.py
src/prozorro_crawler/: callbacks.py  crawler.py  lock.py  logging.py  main.py  resource.py  settings.py  storage.py  utils.py
src/prozorro_crawler/storage/: __init__.py  base.py  mongodb.py  postgres.py
src/tests/: test_main.py  test_model.py  test_storage.py
tests/: base.py  test_crawler.py  test_main.py  test_resource.py  test_storage.py
