[project]
name = "prozorro_crawler"
version = "2.1.12"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.6.2,<4",
    "asyncpg>=0.25.0,<1",
    "motor~=3.7",
    "python-dateutil>=2.4.1",
    "python-json-logger>=2.0.2,<3",
    "pytz>=2025.2",
    "yarl>=1.5.0,<2",
]

[tool.uv]
package = true

[tool.uv.sources]
prozorro-crawler = { path = "src", editable = true }

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "types-pytz>=2025.2.0.20251108",
]

[tool.mypy]
[[tool.mypy.overrides]]
strict = true
ignore_missing_imports = true
module = ["asyncpg.*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
